--- a/app/views/static_pages/mygraph.html.erb
+++ b/app/views/static_pages/mygraph.html.erb
@@ -1,5 +1,5 @@
-<h1>StaticPages#mygraph</h1>
-<p>Find me in app/views/static_pages/mygraph.html.erb</p>
+<h1>My amCharts Graph</h1>
+<p>This is my amCharts graph</p>
 
  <div id="chartdiv" style="width: 100%; height: 400px;"></div>
 
