--- a/app/views/static_pages/mygraph.html.erb
+++ b/app/views/static_pages/mygraph.html.erb
@@ -6,58 +6,7 @@
  <script type="text/javascript">
             var chart;
 
-            var chartData = [{
-                country: "USA",
-                visits: 4025
-            }, {
-                country: "China",
-                visits: 1882
-            }, {
-                country: "Japan",
-                visits: 1809
-            }, {
-                country: "Germany",
-                visits: 1322
-            }, {
-                country: "UK",
-                visits: 1122
-            }, {
-                country: "France",
-                visits: 1114
-            }, {
-                country: "India",
-                visits: 984
-            }, {
-                country: "Spain",
-                visits: 711
-            }, {
-                country: "Netherlands",
-                visits: 665
-            }, {
-                country: "Russia",
-                visits: 580
-            }, {
-                country: "South Korea",
-                visits: 443
-            }, {
-                country: "Canada",
-                visits: 441
-            }, {
-                country: "Brazil",
-                visits: 395
-            }, {
-                country: "Italy",
-                visits: 386
-            }, {
-                country: "Australia",
-                visits: 384
-            }, {
-                country: "Taiwan",
-                visits: 338
-            }, {
-                country: "Poland",
-                visits: 328
-            }];
+            var chartData = <%= raw @countries.to_json.gsub(/\"created_at\"/, "created_at").gsub(/\"id\"/, "id").gsub(/\"country\"/, "country").gsub(/\"visits\"/, "visits").gsub(/\"updated_at\"/, "updated_at") %>;
 
 
             AmCharts.ready(function () {
@@ -72,10 +21,6 @@
                 var categoryAxis = chart.categoryAxis;
                 categoryAxis.labelRotation = 90;
                 categoryAxis.gridPosition = "start";
-
-                // value
-                // in case you don"t want to change default settings of value axis,
-                // you don"t need to create it, as one value axis is created automatically.
 
                 // GRAPH
                 var graph = new AmCharts.AmGraph();
